fix content overflow and scroll issue

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -113,6 +113,7 @@
     height: 100%;
     margin: auto;
     padding: 1rem 15%;
+    overflow-y: auto;
     width: 100%;
 }
 
